<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1f5fe"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- AppBarLayout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AppBarLayout"/>

                <Button
                    android:id="@+id/btn_AppBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AppBarLayout"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- CollapsingToolBarLayout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CollapsingToolBarLayout"/>

                <Button
                    android:id="@+id/btn_CollspsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CollapsingToolBarLayout"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- CoordinatorLayout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CoordinatorLayout"/>

                <Button
                    android:id="@+id/btn_CoordinatorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CoordinatorLayout"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- FloatingActionButton -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FloatingActionButton"/>

                <Button
                    android:id="@+id/btn_FloatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FloatingActionButton"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Navigation Drawer -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NavigationView"/>

                <Button
                    android:id="@+id/btn_NavigationDrawer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NavigationView"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Palette -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Palette"/>

                <Button
                    android:id="@+id/btn_Palette"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Palette"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- RecyclerView_CardView -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RecyclerView_CardView"/>

                <Button
                    android:id="@+id/btn_RecyclerView_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RecyclerView_CardView"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- SnackBar -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SnackBar"/>

                <Button
                    android:id="@+id/btn_SnackBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SnackBar"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- TextInputLayout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TextInputLayout"/>

                <Button
                    android:id="@+id/btn_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TextInputLayout"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ToolBar -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ToolBar"/>

                <Button
                    android:id="@+id/btn_ToolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ToolBar"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
