<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89daff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Simple Behavior 1 -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SimpleBehavior1"/>

                <Button
                    android:id="@+id/btn_simpleBehavior1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SimpleBehavior1"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Simple Behavior 2 -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SimpleBehavior2"/>

                <Button
                    android:id="@+id/btn_simpleBehavior2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SimpleBehavior2"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Swipe Behavior -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@mipmap/material_1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SwipeBehavior"/>

                <Button
                    android:id="@+id/btn_SwipeBehavior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SwipeBehavior"
                    android:textAllCaps="false"
                    android:textColor="#89000000"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
